# clTracer

./: .gitignore  CMakeLists.txt  Raytracer.pptx  readme.txt
examples/: blur.ppm  cornell.in  rainbow1.ppm  smallpt.in  test1.in  test1_ext.in  test2.in  test2_ext.in  test3.in  test3_ext.in  test4.in  test4_colorfix.in  test4_ext.in  test5.in  test5_ext.in  test6.in  test6_ext.in
output/: test1-aa4-ss8.ppm  test1-ss8.ppm  test1.ppm  test2-ss8.ppm  test2.ppm  test3-ss8.ppm  test3.ppm  test4.ppm  test4_ext-aa4-ss8-400784ms.ppm  test4_ext-ss8-24888ms.ppm  test5-ss8-aa4.ppm  test5-ss8.ppm  test5.ppm  test6-ss8.ppm  test6.ppm
source/: CmdArgs.cpp  CmdArgs.hpp  Color.hpp  PPMImage.cpp  PPMImage.hpp  Renderer.cpp  Renderer.hpp  Sampler.hpp  Screen.cpp  Screen.hpp  World.cpp  World.hpp  error.hpp  main.cpp  parser.cpp  parser.hpp  utils.hpp
source/clSampler/: CodeGenerator.cpp  CodeGenerator.hpp  OpenCL.h  Sampler.cpp  SamplerImpl.cpp  SamplerImpl.hpp  clUtils.c  clUtils.h  sampler.cl
source/clSampler/cl/: Intersection.cl  brdf.cl  direction.cl  object.cl  radiance.cl  random.cl  recursion.cl  sampler.cl
source/math/: Vector.hpp  math.hpp
source/old/: error.h  main.c  parser.c  parser.h  tracer.h  types.h  vecmath.c  vecmath.h
source/old/clTracer/: OpenCL.h  clTracer.c  clUtils.h  tracer.cl
source/old/old/: Color.hpp  Ppm.cpp  Ppm.hpp  error.cpp  error.hpp  intersection.cpp  intersection.hpp  main.cpp  parser.cpp  parser.hpp  rayTracer.cpp  rayTracer.hpp  scene.cpp  scene.hpp  types.cpp  types.hpp
source/old/old/math/: Matrix.hpp  Plane.hpp  Point.hpp  math.hpp
